# Samurai-Shodown-Neo-Geo

./: .gitignore  .~lock.Estimacion horas.xls#  .~lock.Tasks.xls#  CMakeLists.txt  Cosetes.txt  Estimacion horas.xls  Estimacion horas.xlsx  Hello World Pol.txt  Hello world.txt  Index.html  README.md  Tasks.xls  _config.yml  index.html  issue_template.md
Builds/: info.txt
FSM Ryu Exercise/: FSM_Ryu.vcxproj  main.cpp
SDL3_handout/: Application.cpp  Application.h  Main.cpp  ModuleBackground.cpp  ModuleBackground.h  ModuleInput.cpp  ModuleInput.h  ModuleMusic.cpp  ModuleMusic.h  ModuleRender.cpp  ModuleRender.h  ModuleTextures.cpp  ModuleTextures.h  SDL Game.vcxproj  SDL Game.vcxproj.filters
SDL4_Handout/: Animation.h  Application.cpp  Application.h  ModuleBackground.cpp  ModuleBackground.h  ModuleFadeToBlack.cpp  ModuleMenu.cpp  ModuleMenu.h  ModuleMusic.cpp  ModuleMusic.h  ModulePlayer.cpp  ModulePlayer.h  ModuleRender.cpp  ModuleSceneCongrats.cpp  ModuleSceneCongrats.h  ModuleSceneHaohmaru.cpp  ModuleSceneHaohmaru.h  ModuleSceneNakoruru.cpp  ModuleSceneNakoruru.h  ModuleTextures.cpp  SDL Game.vcxproj  SDL Game.vcxproj.filters
SDL5_Handout/: Module.h  ModuleFadeToBlack.cpp  ModuleFadeToBlack.h  ModulePlayer.cpp  ModuleSceneHonda.cpp  ModuleSceneKen.cpp  SDL Game.vcxproj
SDL5_Handout_Pol/: ModuleFadeToBlack.cpp  ModuleFadeToBlack.h  ModulePlayer.cpp  ModuleSceneHonda.cpp  ModuleSceneKen.cpp
SDL6_Handout_Pol/: Application.cpp  Application.h  ModuleParticles.cpp  ModulePlayer.cpp  ModuleSceneIntro.cpp  ModuleSceneIntro.h  ModuleSceneSpace.cpp  SDL Game.vcxproj
SDL7_Handout/: ModuleCollision.cpp  ModulePlayer.cpp  ModulePlayer.h  ModuleSceneSpace.cpp  ModuleSceneSpace.h
SDL7_Handout_Pol/: ModuleCollision.cpp  ModulePlayer.cpp  ModulePlayer.h  ModuleSceneSpace.cpp  SDL Game.vcxproj
SDL9_Handout_Pol/: ModuleFonts.cpp  ModulePlayer.cpp  SDL Game.vcxproj
Samurai Shodown/: Animation.h  Application.cpp  Application.h  Module.h  ModuleCollision.cpp  ModuleCollision.h  ModuleEnding.cpp  ModuleEnding.h  ModuleFadeToBlack.cpp  ModuleFadeToBlack.h  ModuleFonts.cpp  ModuleInput.cpp  ModuleInput.h  ModuleInputPlayer.cpp  ModuleInputPlayer.h  ModuleMenu.cpp  ModuleMusic.cpp  ModuleMusic.h  ModuleParticles.cpp  ModuleParticles.h  ModulePlayer.cpp  ModulePlayer.h  ModulePlayer2.cpp  ModulePlayer2.h  ModuleRender.cpp  ModuleSceneCongrats.cpp  ModuleSceneCongrats.h  ModuleSceneHaohmaru.cpp  ModuleSceneHaohmaru.h  ModuleSceneNakoruru.cpp  ModuleSceneNakoruru.h  ModuleTextures.cpp  ModuleTextures.h  ModuleUI.cpp  ModuleUI.h  ModuleVictoryHaohmaru.cpp  ModuleVictoryHaohmaru.h  ModuleWindow.cpp  README.md  SDL Game.sln  (+2 more)
Samurai Shodown_code/: Animation.h  Application.cpp  Application.h  Globals.h  ModuleEnding.cpp  ModuleEnding.h  ModuleFadeToBlack.cpp  ModuleFonts.cpp  ModuleInput.cpp  ModuleInput.h  ModuleMenu.cpp  ModuleMenu.h  ModuleMusic.cpp  ModuleMusic.h  ModuleParticles.cpp  ModuleParticles.h  ModulePetP1.cpp  ModulePetP1.h  ModulePetP2.cpp  ModulePetP2.h  ModulePlayer.cpp  ModulePlayer.h  ModulePlayer2.cpp  ModulePlayer2.h  ModuleRender.cpp  ModuleRender.h  ModuleSceneHaohmaru.cpp  ModuleSceneHaohmaru.h  ModuleSceneNakoruru.cpp  ModuleSceneNakoruru.h  ModuleSelect.cpp  ModuleSelect.h  ModuleSlowdown.cpp  ModuleTextures.cpp  ModuleUI.cpp  ModuleUI.h  ModuleVictoryHaohmaru.cpp  ModuleWindow.cpp  SDL Game.vcxproj  SDL Game.vcxproj.filters  (+1 more)
doc/: index.html
src/: Animation.h  Application.cpp  Globals.cpp  Globals.h  Main.cpp  ModuleEnding.cpp  ModuleEnding.h  ModuleFadeToBlack.cpp  ModuleFadeToBlack.h  ModuleFonts.cpp  ModuleFonts.h  ModuleInput.cpp  ModuleInput.h  ModuleMenu.cpp  ModuleMusic.cpp  ModuleMusic.h  ModuleParticles.cpp  ModulePetP1.cpp  ModulePetP1.h  (+28 more)
(+48 files in other folders)
